queue and stack

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.ejs": "html",
-        "quadraticroots.h": "c"
+        "quadraticroots.h": "c",
+        "queue.h": "c"
     }
 }
