--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.ejs": "html",
         "quadraticroots.h": "c",
-        "queue.h": "c"
+        "queue.h": "c",
+        "data.h": "c"
     }
 }
